// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVaultFactory predicts vault addresses 1`] = `5113`;

exports[`EthVaultFactory predicts vault addresses 2`] = `5101`;

exports[`EthVaultFactory private vault deployment gas with own escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 640213,
}
`;

exports[`EthVaultFactory private vault deployment gas with shared escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 489463,
}
`;

exports[`EthVaultFactory public vault deployment gas with own escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 592060,
}
`;

exports[`EthVaultFactory public vault deployment gas with shared escrow 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 441310,
}
`;
